--- a/client/index.html
+++ b/client/index.html
@@ -10,74 +10,193 @@
   <link rel="stylesheet" href="site_media/css/my.css" />
   <script src="site_media/js/jquery.min.js"></script>
   <script src="site_media/js/jquery.mobile-1.2.0.min.js"></script>
+  <script src="http://weteli.herokuapp.com/socket.io/socket.io.js"></script>
   <script src="site_media/js/my.js"></script>
   <!-- User-generated js -->
   <script>
+      //var server = 'http://weteli.herokuapp.com:80';
+      var server = 'http://192.168.0.2:5000';
+      var socket = io.connect(server);
+
+      socket.on('connect ack', function(data){
+          if (data.success) { $(location).attr('href','#page1');} 
+          else { show_message('warning'); }
+      });
+      socket.on('quiz next notification', function(){ get_quiz(); });
+
+      connect_to_server = function() {
+          if ($('#nickname').val() === ""){
+            alert("please enter your nickname");
+            $('#nickname').focus();
+          }
+          else if ($('#code').val() === ""){
+            alert("please enter the TV code");
+            $('#code').focus();
+          }
+          else {
+            socket.emit('mobile connect', {'nickname':$('#nickname').val(), 'code':$('#code').val()});
+          }
+      }
+
+      show_message = function(type) {
+          $('.message').css('top', '-78px');
+          $('.' + type).animate({top:"0"}, 500);
+          setTimeout(function() {$('.' + type).animate({top: "-78"}, 500);}, 2000);
+      }
+
+      get_quiz = function() {
+          $.getJSON(server + '/quiz?callback=?', null, function(data){
+              if (data.quiz.length) { init_answer(data.stage, data.quiz.pop()); }
+              else {
+                  var image;
+                  $('#stage').html('Stage Completed');
+                  image = $('#quiz_pic');
+                  image.fadeOut('fast', function () {
+                      image.attr('src', server + '/images/end.png');
+                      image.fadeIn('slow');
+                  });
+                  $('#alphabets span').css('background', 'gray');
+                  $('#alphabets span').off('click');
+              }
+          });
+      }
+
+      get_random_str = function(str) {
+          var possible;
+          possible = "abcdefghijklmnopqrstuvwxyz";
+          if (str) { possible = str; }
+          return possible.charAt(Math.floor(Math.random() * possible.length));
+      }
+
+      init_answer = function(stage, answer) {
+          var image, random_keys = "";
+          App['answer']  = answer;
+          App['mapping'] = {};
+
+          $('#stage').html('Stage ' + stage);
+          image = $('#quiz_pic');
+          image.fadeOut('fast', function () {
+              image.attr('src', server + '/images/quiz/'+answer+'.png');
+              image.fadeIn('slow');
+          });
+
+          $('#answer span').remove();
+          $('#alphabets div').remove();
+          for (var i=0; i < answer.length; i++) {
+              $('#answer').append($('<span onClick="javascript:del_single('+i+');" style="display: inline-block; width:30px; height:30px; background:white; margin-right:10px; font-size:x-large">').html('_'));
+          }
+
+          for (var i=0; i < 7; i++){
+              random_keys += get_random_str();
+          }
+          random_keys = (random_keys + answer).substr(-10).toUpperCase();
+
+          for (var i=0; i < 10; i++){
+              var random_key = get_random_str(random_keys);
+              random_keys = random_keys.replace(new RegExp(random_key),"");
+              $('#alphabets').append($('<div style="float: left;width:50px;height:50px">').html($('<span onClick="javascript:add_single('+i+',\''+random_key+'\');" style="display: inline-block; width:40px; height:40px; background:#EAC117; margin-right:5px; margin-bottom: 5px; font-size:xx-large; color:#EBEBEB; text-shadow:2px 2px #000;">').html(random_key)));
+          }
+      }
+      add_single = function(pos, ch) {
+          var index, answers;
+          index = -1;
+          answers = $('#answer span');
+          for (var i=0; i < answers.length; i++) {
+              if (answers[i].innerText == '_') {
+                  index = i;
+                  break;
+              }
+          }
+          
+          if (index > -1) {
+              var res = "";
+              answers[index].innerText = ch;
+              App['mapping'][index] = pos;
+              $('#alphabets span').eq(pos).slideUp();
+
+              for (var i=0; i < answers.length; i++) {
+                  if (answers[i].innerText == '_') {
+                      break;
+                  }
+                  res += answers[i].innerText;
+              }
+              if (i == answers.length) {
+                  if (res == App['answer'].toUpperCase()){ 
+                      show_message('success'); 
+                      $.getJSON(server + '/quiz/next?callback=?', null, null );
+                  }
+                  else {
+                      show_message('error'); 
+                  }
+              }
+          }
+      }
+      del_single = function(pos) {
+          $('#answer span').eq(pos).html('_');
+          $('#alphabets span').eq(App['mapping'][pos]).slideDown();
+      }
+      generate = function(msg, type) {
+          var n = noty({
+              text: msg,
+              type: type,
+              dismissQueue: true,
+              layout: 'center',
+              theme: 'defaultTheme',
+              template: '<div class="noty_message"><span class="noty_text"></span><div class="noty_close"></div></div>',
+              timeout: 2000, // delay for closing event. Set false for sticky notifications
+          });
+          console.log('html: '+n.options.id);
+      }
+
       $(function(){
             App = {};
-
-            get_random_str = function(str) {
-                var possible;
-                possible = "abcdefghijklmnopqrstuvwxyz";
-                if (str) { possible = str; }
-                return possible.charAt(Math.floor(Math.random() * possible.length));
-            }
-
-            init_answer = function(answer) {
-                var random_keys = "";
-                App['answer']  = answer;
-                App['mapping'] = {};
-
-                $('#answer span').remove();
-                for (var i=0; i < answer.length; i++) {
-                    $('#answer').append($('<span onClick="javascript:del_single('+i+');" style="display: inline-block; width:30px; height:30px; background:white; margin-right:10px; font-size:x-large">').html('_'));
-                }
-
-                for (var i=0; i < 7; i++){
-                    random_keys += get_random_str();
-                }
-                random_keys = (random_keys + answer).substr(-10).toUpperCase();
-
-                for (var i=0; i < 10; i++){
-                    var random_key = get_random_str(random_keys);
-                    random_keys = random_keys.replace(new RegExp(random_key),"");
-                    $('#alphabets').append($('<div style="float: left;width:50px;height:50px">').html($('<span onClick="javascript:add_single('+i+',\''+random_key+'\');" style="display: inline-block; width:40px; height:40px; background:#EAC117; margin-right:5px; margin-bottom: 5px; font-size:xx-large; color:#EBEBEB; text-shadow:2px 2px #000;">').html(random_key)));
-                }
-            }
-            add_single = function(pos, ch) {
-                var index, answers;
-                index = -1;
-                answers = $('#answer span');
-                for (var i=0; i < answers.length; i++) {
-                    if (answers[i].innerText == '_') {
-                        index = i;
-                        break;
-                    }
-                }
-                
-                if (index > -1) {
-                    answers[index].innerText = ch;
-                    App['mapping'][index] = pos;
-                    $('#alphabets span').eq(pos).slideUp();
-                }
-            }
-            del_single = function(pos) {
-                $('#answer span').eq(pos).html('_');
-                $('#alphabets span').eq(App['mapping'][pos]).slideDown();
-            }
-
-            init_answer('SHAKE');
+            get_quiz();
       });
   </script>
 </head>
 <body>
+  <!-- intro -->
+  <div data-role="page" id="page8">
+      <div data-theme="a" data-role="header">
+          <h3>
+              What's the word?
+          </h3>
+      </div>
+      <div data-role="content" >
+          <div style="text-align:center;">
+              <img width="100%" src="site_media/images/intro.jpg">
+          </div>
+          <div data-role="fieldcontain">
+              <fieldset data-role="controlgroup">
+                  <label for="textinput1">
+                      Nickname
+                  </label>
+                  <input id="nickname" placeholder="What are you called?" value="" type="text">
+              </fieldset>
+          </div>
+          <div data-role="fieldcontain">
+              <fieldset data-role="controlgroup">
+                  <label for="textinput2">
+                      Code
+                  </label>
+                  <input id="code" placeholder="Enter the code bottom of the TV" value="" maxlength="4" type="text">
+              </fieldset>
+          </div>
+          <input onClick="javascript:connect_to_server();" type="button" data-theme="b" data-icon="refresh" data-iconpos="left" value="Let's Play">
+      </div>
+      <div data-theme="a" data-role="footer" data-position="fixed">
+          <h3>
+              Powered by Vu:Talk
+          </h3>
+      </div>
+  </div>
   <div data-role="page" id="page1">
       <div data-theme="" data-role="header">
-          <h5> Stage 23 </h3>
+          <h5 id="stage"> Stage &nbsp;&nbsp;</h5>
       </div>
       <div data-role="content" style="background-image: url(site_media/images/word_wall.jpg); border: 1px solid black;">
           <div style="text-align:center">
-              <img style="width: 280px; height: 280px" src="site_media/images/quiz/shake.png">
+              <img style="width: 280px; height: 280px" id="quiz_pic">
           </div>
           <div style="text-align:center" id="answer">
               <ul></ul>
@@ -85,11 +204,23 @@
           <div class="ui-grid-d" id="alphabets" style="margin: 30px 50px;text-align:center;">
           </div>
       </div>
-      <div data-theme="c", data-role="footer", data-position="fixed">
+      <div data-theme="c", data-role="footer">
           <h5>
               <p> Powered by Realtime Relay Sever (a.k.a Vu:Talk) </p>
           </h5>
       </div>
+  </div>
+  <div class="success message" style="top: -78px;">
+      <h3>Congrats, you did it!</h3>
+      <p>Let's move on to the next problem.</p>
+  </div>
+  <div class="warning message" style="top: -78px;">
+      <h3>Warning!</h3>
+      <p>Please check your nickname and TV code.</p>
+  </div>
+  <div class="error message" style="top: -78px;">
+      <h3>Oops, incorrect answer</h3>
+      <p>Please check your answer again!</p>
   </div>
 </body>
 </html>
