--- a/client/index.html
+++ b/client/index.html
@@ -10,11 +10,11 @@
   <link rel="stylesheet" href="site_media/css/my.css" />
   <script src="site_media/js/jquery.min.js"></script>
   <script src="site_media/js/jquery.mobile-1.2.0.min.js"></script>
-  <script src="http://weteli.herokuapp.com/socket.io/socket.io.js"></script>
+  <script src="http://weword.herokuapp.com/socket.io/socket.io.js"></script>
   <script src="site_media/js/my.js"></script>
   <!-- User-generated js -->
   <script>
-      //var server = 'http://weteli.herokuapp.com:80';
+      //var server = 'http://weword.herokuapp.com:80';
       var server = 'http://192.168.0.2:5000';
       var socket = io.connect(server);
 
