--- a/client/index.html
+++ b/client/index.html
@@ -14,8 +14,8 @@
   <script src="site_media/js/my.js"></script>
   <!-- User-generated js -->
   <script>
-      //var server = 'http://weword.herokuapp.com:80';
-      var server = 'http://192.168.0.2:5000';
+      var server = 'http://weword.herokuapp.com:80';
+      //var server = 'http://192.168.0.2:5000';
       var socket = io.connect(server);
 
       socket.on('connect ack', function(data){
@@ -129,7 +129,9 @@
               }
               if (i == answers.length) {
                   console.log(res);
-                  $.getJSON(server + '/quiz/submit?callback=?', {'nickname':App['nickname'], 'answer': res});
+                  $.getJSON(server + '/quiz/submit?callback=?', {'nickname':App['nickname'], 'answer': res}, function(data){
+                      if (!data.success){ show_message('error'); }
+                  });
               }
           }
       }
