반응형 UI 적용

--- a/client/index.html
+++ b/client/index.html
@@ -14,8 +14,8 @@
   <script src="site_media/js/my.js"></script>
   <!-- User-generated js -->
   <script>
-      var server = 'http://weword.herokuapp.com:80';
-      //var server = 'http://192.168.0.2:5000';
+      //var server = 'http://weword.herokuapp.com:80';
+      var server = 'http://192.168.0.2:5000';
       var socket = io.connect(server);
 
       socket.on('connect ack', function(data){
@@ -97,11 +97,12 @@
               random_keys += get_random_str();
           }
           random_keys = (random_keys + answer).substr(-10).toUpperCase();
+          width = $('#alphabets').width() / 5;
 
           for (var i=0; i < 10; i++){
               var random_key = get_random_str(random_keys);
               random_keys = random_keys.replace(new RegExp(random_key),"");
-              $('#alphabets').append($('<div style="float: left;width:50px;height:50px">').html($('<span onClick="javascript:add_single('+i+',\''+random_key+'\');" style="display: inline-block; width:40px; height:40px; background:#EAC117; margin-right:5px; margin-bottom: 5px; font-size:xx-large; color:#EBEBEB; text-shadow:2px 2px #000;">').html(random_key)));
+              $('#alphabets').append($('<div style="float: left;width:'+width+'px;height:50px">').html($('<span onClick="javascript:add_single('+i+',\''+random_key+'\');" style="display: inline-block; width:40px; height:40px; background:#EAC117; margin-right:5px; margin-bottom: 5px; font-size:xx-large; color:#EBEBEB; text-shadow:2px 2px #000;">').html(random_key)));
           }
       }
       add_single = function(pos, ch) {
